--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        mamajo's empanada
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Mamajo's</title>
+    <link rel="stylesheet" href="system.css">
+</head>
+<body>
+    <div class="header">
+        <img src="images/Hello Mamajo's NO BG.png" alt="Hello Mamajo mascot">
+        <div class="title-group">
+            <h1>Mamajo's |</h1>
+            <h3>Point of Sales and Inventory Management System</h3>
+        </div>
+    </div>
+</body>
 </html>
