--- a/index.html
+++ b/index.html
@@ -2,16 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mamajo's</title>
     <link rel="stylesheet" href="system.css">
 </head>
 <body>
-    <div class="header">
-        <img src="images/Hello Mamajo's NO BG.png" alt="Hello Mamajo mascot">
-        <div class="title-group">
-            <h1>Mamajo's |</h1>
-            <h3>Point of Sales and Inventory Management System</h3>
+
+    <!-- Page Header -->
+    <header class="page-header">
+        <div class="header-content">
+            <div class="title-group">
+                <h1>Mamajo's |</h1>
+                <h3>Point of Sales and Inventory Management System</h3>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content Section -->
+    <div class="main-content">
+        <!-- User Login Section -->
+        <div class="login-container">
+            <div class="login-form">
+                <h2>User Login</h2>
+                <div class="aloha-message">
+                    <p>Aloha!</p>
+                </div>
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required placeholder="Enter your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required placeholder="Enter your password">
+                    </div>
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Mamajo Mascot Image -->
+        <div class="image-container">
+            <img src="images/Hello Mamajo's NO BG.png" alt="Hello Mamajo mascot" class="Mascot">
         </div>
     </div>
+
 </body>
 </html>
