--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Main Content Section -->
     <div class="main-content">
+        
         <!-- User Login Section -->
         <div class="login-container">
             <div class="login-form">
@@ -27,7 +28,7 @@
                 <div class="aloha-message">
                     <p>Aloha!</p>
                 </div>
-                <form action="#" method="post">
+                <form action="homepage.html" method="get">
                     <div class="form-group">
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required placeholder="Enter your email">
