--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <!-- Main Content Section -->
     <div class="main-content">
         
-        <!-- User Login Section -->
+        <!-- Mamajo Mascot Image (now on the left) -->
+        <div class="image-container">
+            <img src="images/Hello Mamajo's NO BG (2).png" alt="Hello Mamajo mascot" class="Mascot">
+        </div>
+
+        <!-- User Login Section (now on the right) -->
         <div class="login-container">
             <div class="login-form">
                 <h2>User Login</h2>
@@ -40,11 +45,6 @@
                     <button type="submit">Login</button>
                 </form>
             </div>
-        </div>
-
-        <!-- Mamajo Mascot Image -->
-        <div class="image-container">
-            <img src="images/Hello Mamajo's NO BG.png" alt="Hello Mamajo mascot" class="Mascot">
         </div>
     </div>
 
