--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mamajo's Dashboard</title>
   <style>
+    /* Custom Fonts */
+    @font-face {
+      font-family: 'GrandHeavy';
+      src: url('fonts/Agrandir-GrandHeavy.otf') format('opentype');
+    }
+    @font-face {
+      font-family: 'GrandLight';
+      src: url('fonts/Agrandir-GrandLight.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'Regular';
+      src: url('fonts/Agrandir-Regular.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'Narrow';
+      src: url('fonts/Agrandir-Narrow.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'TextBold';
+      src: url('fonts/Agrandir-TextBold.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'ThinItalic';
+      src: url('fonts/Agrandir-ThinItalic.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'Tight';
+      src: url('fonts/Agrandir-Tight.otf') format('truetype');
+    }
+    @font-face {
+      font-family: 'WideLight';
+      src: url('fonts/Agrandir-WideLight.otf') format('truetype');
+    }
+
     * {
       box-sizing: border-box;
     }
@@ -12,21 +46,20 @@
     body, html {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'GrandHeavy', Arial, sans-serif;
       height: 100%;
-      background-color: #f5f5f5; /* Page background */
-      overflow: hidden; /* Remove scroll */
+      background-color: #f5f5f5;
+      overflow: hidden;
     }
 
-    /* Header styles */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 20px; /* Increased header height */
-      background-color: #055b00; /* Green */
+      padding: 20px 20px;
+      background-color: #055b00;
       color: #ffffff;
-      width: 100%; /* Full width */
+      width: 100%;
       z-index: 10;
     }
 
@@ -42,9 +75,9 @@
     }
 
     .logo-container span {
-      font-size: 30px; /* Bigger text */
+      font-size: 30px;
       font-weight: bold;
-      color: #ffffff; /* White */
+      color: #ffffff;
     }
 
     #datetime-container {
@@ -52,28 +85,27 @@
     }
 
     #date {
-      color: #ff9533; /* Yellow */
-      font-weight: bold;
-      font-size: 22px; /* Larger and bolder */
+      color: #ff9533;
+      font-family: 'TextBold';
+      font-size: 22px;
     }
 
     #time {
-      color: #ffffff; /* White for time */
+      color: #ffffff;
       font-weight: bold;
     }
 
-    /* Sidebar styles (tabs) */
     .sidebar {
       width: 220px;
-      background-color: #ff9533; /* Yellow */
+      background-color: #ff9533;
       color: #f5f5f5;
       display: flex;
       flex-direction: column;
       padding-top: 20px;
       padding-bottom: 20px;
-      position: relative; /* Relative positioning to stay in line with header */
+      position: relative;
       top: 0;
-      height: calc(100% - 70px); /* Adjust to fit below header */
+      height: calc(100% - 70px);
     }
 
     .tab-links {
@@ -82,31 +114,30 @@
     }
 
     .sidebar a {
-      padding: 30px 25px; /* Larger tabs */
-      color: #d82b12; /* Darker red for non-active tabs */
+      padding: 30px 25px;
+      color: #d82b12;
       text-decoration: none;
-      font-weight: bold;
-      font-size: 22px; /* Larger tab text */
+      font-family: 'TextBold', Arial, sans-serif;
+      font-size: 22px;
       transition: background 0.3s, padding-left 0.3s;
     }
 
     .sidebar a:hover {
-      background-color: #d82b12; /* Darker red background on hover */
-      color: #ffffff; /* White text on hover */
+      background-color: #d82b12;
+      color: #ffffff;
       padding-left: 30px;
     }
 
     .sidebar a.active {
-      background-color: #d82b12; /* Darker red background for active tab */
-      color: #ffffff; /* White text */
+      background-color: #d82b12;
+      color: #ffffff;
     }
 
-    /* Burger menu at bottom left */
     .burger-menu {
       position: absolute;
-      bottom: 20px; /* Lower the burger menu */
-      left: 0px; /* Align it with the start of the tabs */
-      padding: 15px 25px; /* Aligns with tab text */
+      bottom: 20px;
+      left: 0px;
+      padding: 15px 25px;
       cursor: pointer;
     }
 
@@ -117,25 +148,24 @@
     .burger-icon span {
       display: block;
       height: 4px;
-      background-color: #055b00; /* Green */
+      background-color: #055b00;
       margin: 5px 0;
       border-radius: 2px;
       width: 25px;
     }
 
-    /* Main content area */
     .main-content {
       flex: 1;
-      margin-left: 220px; /* To give space for the fixed sidebar */
+      margin-left: 220px;
       padding: 20px;
       height: 100%;
-      overflow: hidden; /* Prevent scroll */
+      overflow: hidden;
     }
 
-    /* Page content */
     .page-content {
       padding: 20px;
       flex: 1;
+      font-family: 'GrandLight', Arial, sans-serif;
     }
   </style>
 </head>
@@ -144,7 +174,7 @@
   <!-- Header -->
   <header>
     <div class="logo-container">
-      <img src="images/Empanada NO BG.png" alt="Logo" />
+      <img src="images/Mamajo's Logo Empanada NO BG.png" alt="Logo" />
       <span>Mamajo's</span>
     </div>
     <div id="datetime-container">
@@ -155,7 +185,6 @@
 
   <!-- Sidebar (Tabs) -->
   <div class="sidebar">
-    <!-- Tabs -->
     <div class="tab-links">
       <a href="#" class="active">Home</a>
       <a href="#">Point of Sales</a>
@@ -164,7 +193,6 @@
       <a href="#">Feedback</a>
     </div>
 
-    <!-- Burger Menu -->
     <div class="burger-menu">
       <div class="burger-icon">
         <span></span>
@@ -177,7 +205,8 @@
   <!-- Main Content Area -->
   <div class="main-content">
     <div class="page-content">
-      <!-- HOME content intentionally left blank -->
+      <h2>Welcome to Mamajo's Dashboard</h2>
+      <p>Select a tab on the left to begin your day. Empanadas don’t sell themselves!</p>
     </div>
   </div>
 
