--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mamajo's</title>
-    <link rel="stylesheet" href="system.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mamajo's</title>
+  <link rel="stylesheet" href="system.css" />
 </head>
 <body>
 
-    <!-- Page Header -->
-    <header class="page-header">
-        <div class="header-content">
-            <div class="title-group">
-                <h1>Mamajo's |</h1>
-                <h3>Point of Sales and Inventory Management System</h3>
-            </div>
-        </div>
-    </header>
+  <!-- Background Overlay Image -->
+  <img src="images/Your paragraph text (2).png" class="background-overlay" alt="Overlay Background">
 
-    <!-- Main Content Section -->
-    <div class="main-content">
-        
-        <!-- Mamajo Mascot Image (now on the left) -->
-        <div class="image-container">
-            <img src="images/Hello Mamajo's NO BG (2).png" alt="Hello Mamajo mascot" class="Mascot">
-        </div>
-
-        <!-- User Login Section (now on the right) -->
-        <div class="login-container">
-            <div class="login-form">
-                <h2>User Login</h2>
-                <div class="aloha-message">
-                    <p>Aloha!</p>
-                </div>
-                <form action="homepage.html" method="get">
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required placeholder="Enter your email">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" required placeholder="Enter your password">
-                    </div>
-                    <button type="submit">Login</button>
-                </form>
-            </div>
-        </div>
+  <!-- Page Header -->
+  <header class="page-header">
+    <div class="header-content">
+      <div class="title-group">
+        <h1>Mamajo's |</h1>
+        <h3>Point of Sales & Inventory Management System</h3>
+      </div>
     </div>
+  </header>
+
+  <!-- Main Content -->
+  <div class="main-content">
+    
+    <!-- Mascot Image -->
+    <div class="image-container">
+      <img src="images/Hello Mamajo's NO BG (2).png" alt="Hello Mamajo mascot" class="Mascot">
+    </div>
+
+    <!-- Login Form -->
+    <div class="login-container">
+      <div class="login-form">
+        <p>Hello there!</p>
+        <form action="homepage.html" method="get">
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required placeholder="Enter your password">
+          </div>
+          <button type="submit">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
