--- a/homepage.html
+++ b/homepage.html
@@ -3,174 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mamajo's Dashboard</title>
-  <style>
-    /* Custom Fonts */
-    @font-face {
-      font-family: 'GrandHeavy';
-      src: url('fonts/Agrandir-GrandHeavy.otf') format('opentype');
-    }
-    @font-face {
-      font-family: 'GrandLight';
-      src: url('fonts/Agrandir-GrandLight.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'Regular';
-      src: url('fonts/Agrandir-Regular.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'Narrow';
-      src: url('fonts/Agrandir-Narrow.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'TextBold';
-      src: url('fonts/Agrandir-TextBold.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'ThinItalic';
-      src: url('fonts/Agrandir-ThinItalic.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'Tight';
-      src: url('fonts/Agrandir-Tight.otf') format('truetype');
-    }
-    @font-face {
-      font-family: 'WideLight';
-      src: url('fonts/Agrandir-WideLight.otf') format('truetype');
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'GrandHeavy', Arial, sans-serif;
-      height: 100%;
-      background-color: #f5f5f5;
-      overflow: hidden;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 20px;
-      background-color: #055b00;
-      color: #ffffff;
-      width: 100%;
-      z-index: 10;
-    }
-
-    .logo-container {
-      display: flex;
-      align-items: center;
-    }
-
-    .logo-container img {
-      height: 40px;
-      width: 40px;
-      margin-right: 10px;
-    }
-
-    .logo-container span {
-      font-size: 30px;
-      font-weight: bold;
-      color: #ffffff;
-    }
-
-    #datetime-container {
-      text-align: right;
-    }
-
-    #date {
-      color: #ff9533;
-      font-family: 'TextBold';
-      font-size: 22px;
-    }
-
-    #time {
-      color: #ffffff;
-      font-weight: bold;
-    }
-
-    .sidebar {
-      width: 220px;
-      background-color: #ff9533;
-      color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      position: relative;
-      top: 0;
-      height: calc(100% - 70px);
-    }
-
-    .tab-links {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .sidebar a {
-      padding: 30px 25px;
-      color: #d82b12;
-      text-decoration: none;
-      font-family: 'TextBold', Arial, sans-serif;
-      font-size: 22px;
-      transition: background 0.3s, padding-left 0.3s;
-    }
-
-    .sidebar a:hover {
-      background-color: #d82b12;
-      color: #ffffff;
-      padding-left: 30px;
-    }
-
-    .sidebar a.active {
-      background-color: #d82b12;
-      color: #ffffff;
-    }
-
-    .burger-menu {
-      position: absolute;
-      bottom: 20px;
-      left: 0px;
-      padding: 15px 25px;
-      cursor: pointer;
-    }
-
-    .burger-icon {
-      display: inline-block;
-    }
-
-    .burger-icon span {
-      display: block;
-      height: 4px;
-      background-color: #055b00;
-      margin: 5px 0;
-      border-radius: 2px;
-      width: 25px;
-    }
-
-    .main-content {
-      flex: 1;
-      margin-left: 220px;
-      padding: 20px;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    .page-content {
-      padding: 20px;
-      flex: 1;
-      font-family: 'GrandLight', Arial, sans-serif;
-    }
-  </style>
+  <title>Mamajo's</title>
+  <link rel="stylesheet" href="homepage.css" />
 </head>
 <body>
-
   <!-- Header -->
   <header>
     <div class="logo-container">
@@ -187,7 +23,7 @@
   <div class="sidebar">
     <div class="tab-links">
       <a href="#" class="active">Home</a>
-      <a href="#">Point of Sales</a>
+      <a href="pos.html">Point of Sales</a>
       <a href="#">Inventory</a>
       <a href="#">Sales Report</a>
       <a href="#">Feedback</a>
