draft pos with final products

--- a/pos.html
+++ b/pos.html
@@ -56,35 +56,35 @@
             <p>Pork Asado - Regular</p>
           </div>
           <div class="product">
-            <img src="images/1. Chicken Potato.png" alt="Chicken Potato Medium">
+            <img src="images/medium-chickenpotato.png" alt="Chicken Potato Medium">
             <p>Chicken Potato - Medium</p>
           </div>
           <div class="product">
-            <img src="images/2. Ham & Cheese.png" alt="Ham & Cheese Medium">
+            <img src="images/medium-ham&cheese.png" alt="Ham & Cheese Medium">
             <p>Ham & Cheese - Medium</p>
           </div>
           <div class="product">
-            <img src="images/3. Creamy Spinach.png" alt="Creamy Spinach Medium">
+            <img src="images/medium-creamyspinach.png" alt="Creamy Spinach Medium">
             <p>Creamy Spinach - Medium</p>
           </div>
           <div class="product">
-            <img src="images/4. Pork Asado.png" alt="Pork Asado Medium">
+            <img src="images/medium-porkasado.png" alt="Pork Asado Medium">
             <p>Pork Asado - Medium</p>
           </div>
           <div class="product">
-            <img src="images/1. Chicken Potato.png" alt="Chicken Potato Bite-size">
+            <img src="images/bitesize-chickenpotato.png" alt="Chicken Potato Bite-size">
             <p>Chicken Potato - Bite-size</p>
           </div>
           <div class="product">
-            <img src="images/2. Ham & Cheese.png" alt="Ham & Cheese Bite-size">
+            <img src="images/bitesize-ham&cheese.png" alt="Ham & Cheese Bite-size">
             <p>Ham & Cheese - Bite-size</p>
           </div>
           <div class="product">
-            <img src="images/3. Creamy Spinach.png" alt="Creamy Spinach Bite-size">
+            <img src="images/bitesize-creamyspinach.png" alt="Creamy Spinach Bite-size">
             <p>Creamy Spinach - Bite-size</p>
           </div>
           <div class="product">
-            <img src="images/4. Pork Asado.png" alt="Pork Asado Bite-size">
+            <img src="images/bitesize-porkasado.png" alt="Pork Asado Bite-size">
             <p>Pork Asado - Bite-size</p>
           </div>
         </div>
