--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
     <div class="tab-links">
       <a href="#" class="active">Home</a>
       <a href="pos.html">Point of Sales</a>
-      <a href="#">Inventory</a>
+      <a href="inventory.html">Inventory</a>
       <a href="#">Sales Report</a>
       <a href="#">Feedback</a>
     </div>
