--- a/inventory.html
+++ b/inventory.html
@@ -1,202 +1,336 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Inventory - Mamajo's</title>
+<!-- Font face definitions -->
+<style>
+  body,
+  html {
+    margin: 0;
+    padding: 0;
+    font-family: 'GrandHeavy', Arial, sans-serif;
+    background-color: #f9f9f9;
+    height: 100%;
+  }
 
-  <!-- Font face definitions -->
-  <style>
-    @font-face {
-      font-family: 'AgrandirTextBold';
-      src: url('fonts/Agrandir-TextBold.otf') format('opentype');
-    }
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
 
-    @font-face {
-      font-family: 'AgrandirRegular';
-      src: url('fonts/Agrandir-Regular.otf') format('opentype');
-    }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #055b00;
+    padding: 15px 20px;
+    color: #fff;
+  }
 
-    body {
-      margin: 0;
-      font-family: 'AgrandirRegular', sans-serif;
-      background-color: #f5f5f5;
-    }
+  .logo-container {
+    display: flex;
+    align-items: center;
+  }
 
-    .inventory-container {
-      display: flex;
-      justify-content: center;
-      padding: 30px;
-      gap: 30px;
-    }
+  .logo-container img {
+    height: 40px;
+    margin-right: 10px;
+  }
 
-    .card {
-      background-color: #d4d4d4;
-      border-radius: 30px;
-      padding: 20px;
-      width: 300px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  .logo-container span {
+    font-size: 24px;
+    font-weight: bold;
+  }
 
-    .card-title {
-      background-color: #f5f5f5;
-      width: 80%;
-      text-align: center;
-      padding: 15px;
-      border-radius: 20px;
-      font-size: 28px;
-      font-family: 'AgrandirTextBold', sans-serif;
-      margin-bottom: 20px;
-    }
+  #datetime-container {
+    text-align: right;
+  }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
+  #date {
+    font-size: 14px;
+    color: #ff9533;
+  }
 
-    td {
-      padding: 10px;
-      text-align: center;
-    }
+  #time {
+    font-size: 16px;
+  }
 
-    td img {
-      width: 55px;
-      height: 55px;
-      vertical-align: middle;
-    }
+  .content-area {
+    display: flex;
+    flex: 1;
+    overflow: hidden;
+  }
 
-    input[type="number"] {
-      width: 60px;
-      padding: 5px;
-      font-size: 16px;
-      text-align: center;
-      background-color: white;
-      border: 1px solid #888;
-      border-radius: 8px;
-      vertical-align: middle;
-      margin-left: 10px;
-      font-family: 'AgrandirTextBold', sans-serif;
-    }
+  .sidebar {
+    width: 220px;
+    background-color: #ff9533;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 0;
+  }
 
-    .button-group {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      justify-content: center;
-    }
+  .tab-links a {
+    padding: 20px;
+    display: block;
+    color: #d82b12;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+  }
 
-    .edit-btn {
-      background-color: white;
-      color: #ff2210;
-      border: none;
-      padding: 8px 20px;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 10px;
-      cursor: pointer;
-      font-family: 'AgrandirRegular', sans-serif;
-    }
+  .tab-links a:hover,
+  .tab-links a.active {
+    background-color: #d82b12;
+    color: #fff;
+  }
 
-    .edit-btn:hover {
-      background-color: #ff2210;
-      color: white;
-    }
+  .burger-menu {
+    padding: 15px 20px;
+  }
 
-    .save-btn {
-      background-color: white;
-      color: #228B22;
-      border: none;
-      padding: 8px 20px;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 10px;
-      cursor: pointer;
-      font-family: 'AgrandirRegular', sans-serif;
-    }
+  .burger-icon span {
+    display: block;
+    height: 4px;
+    background-color: #055b00;
+    margin: 5px 0;
+    border-radius: 2px;
+    width: 25px;
+  }
 
-    .save-btn:hover {
-      background-color: #228B22;
-      color: white;
-    }
+  @font-face {
+    font-family: 'AgrandirTextBold';
+    src: url('fonts/Agrandir-TextBold.otf') format('opentype');
+  }
 
-  </style>
+  @font-face {
+    font-family: 'AgrandirRegular';
+    src: url('fonts/Agrandir-Regular.otf') format('opentype');
+  }
+
+  body {
+    margin: 0;
+    font-family: 'AgrandirRegular', sans-serif;
+    background-color: #f5f5f5;
+  }
+
+  .inventory-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 30px;
+  }
+
+  .card {
+    background-color: #fff;
+    border-radius: 30px;
+    padding: 15px;
+    width: 300px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .card-title {
+    background-color: #f5f5f5;
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 20px;
+    font-size: 28px;
+    font-family: 'AgrandirTextBold', sans-serif;
+    margin-bottom: 15px;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  td {
+    padding: 10px;
+    text-align: center;
+  }
+
+  td img {
+    width: 75px;
+    height: 75px;
+    vertical-align: middle;
+  }
+
+  input[type="number"] {
+    width: 60px;
+    padding: 5px;
+    font-size: 16px;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #888;
+    border-radius: 8px;
+    vertical-align: middle;
+    margin-left: 10px;
+    font-family: 'AgrandirTextBold', sans-serif;
+  }
+
+  .button-group {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .edit-btn {
+    background-color: #f5f5f5;
+    color: #ff2210;
+    border: none;
+    padding: 8px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: 'AgrandirRegular', sans-serif;
+  }
+
+  .edit-btn:hover {
+    background-color: #ff2210;
+    color: white;
+  }
+
+  .save-btn {
+    background-color: #f5f5f5;
+    color: #228B22;
+    border: none;
+    padding: 8px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: 'AgrandirRegular', sans-serif;
+  }
+
+  .save-btn:hover {
+    background-color: #228B22;
+    color: white;
+  }
+</style>
 </head>
+
 <body>
-
-  <div class="inventory-container">
-    
-    <!-- Regular -->
-    <div class="card">
-      <div class="card-title">Regular</div>
-      <table>
-        <tr>
-          <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="15"></td>
-        </tr>
-        <tr>
-          <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="22"></td>
-        </tr>
-        <tr>
-          <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="37"></td>
-        </tr>
-        <tr>
-          <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="29"></td>
-        </tr>
-      </table>
-      <div class="button-group">
-        <button class="edit-btn">Edit</button>
-        <button class="save-btn">Save</button>
+  <div class="container">
+    <header>
+      <div class="logo-container">
+        <img src="images/Mamajo's Logo Empanada NO BG.png" alt="Logo" />
+        <span>Mamajo's</span>
       </div>
-    </div>
-
-    <!-- Medium -->
-    <div class="card">
-      <div class="card-title">Medium</div>
-      <table>
-        <tr>
-          <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="33"></td>
-        </tr>
-        <tr>
-          <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="74"></td>
-        </tr>
-        <tr>
-          <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="10"></td>
-        </tr>
-        <tr>
-          <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="3"></td>
-        </tr>
-      </table>
-      <div class="button-group">
-        <button class="edit-btn">Edit</button>
-        <button class="save-btn">Save</button>
+      <div id="datetime-container">
+        <div id="date"></div>
+        <div id="time"></div>
       </div>
-    </div>
+    </header>
 
-    <!-- Bite-Sized -->
-    <div class="card">
-      <div class="card-title">Bite-Sized</div>
-      <table>
-        <tr>
-          <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="0"></td>
-        </tr>
-        <tr>
-          <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="0"></td>
-        </tr>
-        <tr>
-          <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="34"></td>
-        </tr>
-        <tr>
-          <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="22"></td>
-        </tr>
-      </table>
-      <div class="button-group">
-        <button class="edit-btn">Edit</button>
-        <button class="save-btn">Save</button>
+    <div class="content-area">
+      <div class="sidebar">
+        <div class="tab-links">
+          <a href="homepage.html">Home</a>
+          <a href="pos.html">Point of Sales</a>
+          <a href="inventory.html" class="active">Inventory</a>
+          <a href="#">Sales Report</a>
+          <a href="#">Feedback</a>
+        </div>
+        <div class="burger-menu">
+          <div class="burger-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
       </div>
-    </div>
 
-  </div>
 
+
+      <div class="inventory-container">
+
+        <!-- Regular -->
+        <div class="card">
+          <div class="card-title">Regular</div>
+          <table>
+            <tr>
+              <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="15"></td>
+            </tr>
+            <tr>
+              <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="22"></td>
+            </tr>
+            <tr>
+              <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="37"></td>
+            </tr>
+            <tr>
+              <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="29"></td>
+            </tr>
+          </table>
+          <div class="button-group">
+            <button class="edit-btn">Edit</button>
+            <button class="save-btn">Save</button>
+          </div>
+        </div>
+
+        <!-- Mini -->
+        <div class="card">
+          <div class="card-title">Mini</div>
+          <table>
+            <tr>
+              <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="33"></td>
+            </tr>
+            <tr>
+              <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="74"></td>
+            </tr>
+            <tr>
+              <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="10"></td>
+            </tr>
+            <tr>
+              <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="3"></td>
+            </tr>
+          </table>
+          <div class="button-group">
+            <button class="edit-btn">Edit</button>
+            <button class="save-btn">Save</button>
+          </div>
+        </div>
+
+        <!-- Bite-Sized -->
+        <div class="card">
+          <div class="card-title">Bite-Sized</div>
+          <table>
+            <tr>
+              <td><img src="images/1. Chicken Potato.png" alt="Chicken Potato"><input type="number" value="0"></td>
+            </tr>
+            <tr>
+              <td><img src="images/2. Ham & Cheese.png" alt="Ham & Cheese"><input type="number" value="0"></td>
+            </tr>
+            <tr>
+              <td><img src="images/3. Creamy Spinach.png" alt="Creamy Spinach"><input type="number" value="34"></td>
+            </tr>
+            <tr>
+              <td><img src="images/4. Pork Asado.png" alt="Pork Asado"><input type="number" value="22"></td>
+            </tr>
+          </table>
+          <div class="button-group">
+            <button class="edit-btn">Edit</button>
+            <button class="save-btn">Save</button>
+          </div>
+        </div>
+
+      </div>
+      <script>
+        function updateDateTime() {
+          const now = new Date();
+          const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+          document.getElementById('date').textContent = now.toLocaleDateString(undefined, options);
+          document.getElementById('time').textContent = now.toLocaleTimeString();
+        }
+
+        updateDateTime();
+        setInterval(updateDateTime, 1000);
+      </script>
 </body>
+
 </html>
