--- a/pos.html
+++ b/pos.html
@@ -24,7 +24,7 @@
         <div class="tab-links">
           <a href="homepage.html">Home</a>
           <a href="#" class="active">Point of Sales</a>
-          <a href="#">Inventory</a>
+          <a href="inventory.html">Inventory</a>
           <a href="#">Sales Report</a>
           <a href="#">Feedback</a>
         </div>
